# tela-client

./: .env.example  .gitgnore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  create_tela_client.py  pyproject.toml  setup.py
.claude/: settings.local.json
docs/: NICEGUI_GUIDE.md  README_tool_calling.md  RUNNING_EXAMPLES.md  history_management_actual_state.md  history_management_future_state.md
examples/: advanced_nicegui_test.py  audio_nicegui_interface.py  audio_transcription_test.py  basic_nicegui_test.py  basic_test.py  chat_management_test.py  conversation_history.py  endpoint_information.py  error_logging_interface.py  list_models.py  streaming_cli.py  streaming_nicegui.py  test_tool_calling.py  text_to_speech_test.py  tool_calling_cli.py  tool_calling_nicegui.py
tela/: __init__.py  _audio.py  _base_client.py  _chats.py  _client.py  _exceptions.py  _history.py  _streaming.py  _streaming_utils.py  _types.py  _utils.py
tela/types/: __init__.py  audio.py  chat.py  chats.py  models.py
tests/: conftest.py  inf_loading_test.py  test_audio.py  test_chat_management.py  test_client.py  test_completions.py  test_conversation_history.py  test_endpoint_info.py  test_error_handling.py  test_integration.py  test_streaming.py
