[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tela-client"
version = "1.2.0"
description = "The official Python library for the Tela API with chat, audio transcription, and text-to-speech capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MAGIC Research", email = "rodrigo@researchmagic.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.23.0,<1",
    "typing-extensions>=4.5,<5",
    "pydantic>=2.0,<3",
]
keywords = ["openai", "fabric", "llm", "api-client", "chat", "ai", "audio", "speech-to-text", "text-to-speech", "transcription", "tts", "stt"]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3,<8",
    "pytest-asyncio>=0.21.0,<1",
    "pytest-mock>=3.10.0,<4",
    "black>=22.3.0,<24",
    "mypy>=1.0,<2",
    "ruff>=0.1.0",
]
ui = [
    "nicegui>=1.4.0,<2",
    "python-dotenv>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/Research-MAGIC/tela-client"
Documentation = "https://docs.telaos.com"
Repository = "https://github.com/Research-MAGIC/tela-client"

[tool.setuptools.packages.find]
include = ["tela*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"